# server.js
@@ -3,13 +3,17 @@ const express = require('express');
 const cors = require('cors');
 const contactdb = require('./contacts/database');
 const bodyParser = require('body-parser');
+const passport = require('passport');
+const session = require('express-session');
+const GithubStrategy = require('passport-github2').Strategy;
 
 
 const app = express();
 
 
 
-app.use(cors());
+app.use(cors({methods: ['GET, POST, PUT, DELETE, UPDATE, PATCH']}));
+app.use(cors({origin: '*'}))
 
 const PORT = process.env.PORT || 8080;
 
@@ -17,6 +21,15 @@ const PORT = process.env.PORT || 8080;
 app.use(express.static('public'));
 // Serve static files from public folder
 app.use(express.static('public'));
+
+app.use(session({
+  secret: 'secret',
+  resave: false,
+  saveUninitialized: true
+}));
+
+app.use(passport.initialize());
+app.use(passport.session());
 
 
 // Use routes
@@ -42,7 +55,35 @@ app.use((req, res, next) => {
   next();
 });
 
-app.use('/', require('./routes'));
+passport.use(new GithubStrategy({
+  clientID: process.env.GITHUB_CLIENT_ID,
+  clientSecret: process.env.GITHUB_CLIENT_SECRET,
+  callbackURL: process.env.CALLBACK_URL
+},
+function(accessToken, refreshToken, profile, done) {
+  return done(null, profile);
+}
+));
+
+passport.serializeUser((user, done) => {
+    done(null, user);
+});
+passport.deserializeUser((user, done) => {
+  done(null, user);
+});
+
+app.get('/', (res, req) => {
+  res.send(req.session.user !== undefined ? `Logged in as ${req.session.user.professionalName}` : 'Logged out')
+})
+
+app.get('/github/callback', passport.authenticate('github', {
+  failureRedirect: '/api-docs', session: false}),
+  (req, res) => {
+      req.session.user = req.user;
+      res.redirect('/');
+  })
+
+app.use('/', require('./routes/index.js'));
 
 
 contactdb.initdb((err) => {
